fix: Corrigido z-index para não sobrepor overlay do menu

--- a/src/app/components/default-layout/default-layout.component.scss
+++ b/src/app/components/default-layout/default-layout.component.scss
@@ -123,7 +123,7 @@ main {
             position: absolute;
             height: 100%;
             width: 100%;
-            z-index: 9999;
+            z-index: 9997;
             background-color: rgb(0 0 0 / 10%);
 
             #loading-overlay-body {
